# quality-tools

./: .clippy.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  ONBOARDING.md  PENDING-FIXES.md  README.md  SECURITY.md  UPGRADE.md  VERSIONING.md  release.toml  rustfmt.toml  test.sh  test_debt.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: quality.yml  release.yml
crates/ast-parse-ts/: Cargo.toml
crates/ast-parse-ts/src/: lib.rs
crates/ast-parse/src/: lib.rs
crates/codemetrics-cli/: Cargo.toml
crates/codemetrics-cli/src/: batch.rs  cli.rs  config.rs  fix.rs  health.rs  history.rs  ignore.rs  incremental.rs  main.rs  output.rs  progress.rs  project.rs  setup.rs  watch.rs
crates/codemetrics-cli/src/checks/: complexity.rs  crap.rs  debt.rs  doc.rs  mod.rs
crates/codemetrics-cli/src/report/: mod.rs
crates/codemetrics-common/: Cargo.toml
crates/codemetrics-common/src/: lib.rs  memory.rs
crates/codemetrics-server/: Cargo.toml
crates/codemetrics-server/src/: main.rs
crates/cohesion/src/: main.rs
crates/coupling/: Cargo.toml
crates/coupling/src/: main.rs
crates/crap-metric/: Cargo.toml
crates/crap-metric/src/: main.rs
crates/dead-code/src/: main.rs
crates/debt-scan/: Cargo.toml
crates/debt-scan/src/: main.rs
crates/doc-coverage/: Cargo.toml
crates/doc-coverage/src/: main.rs
crates/duplication/: Cargo.toml
crates/duplication/src/: main.rs
crates/error-handling/src/: main.rs
crates/fuzz-surface/: Cargo.toml
crates/fuzz-surface/src/: main.rs
crates/line-length/src/: main.rs
crates/mutation-test/: Cargo.toml
crates/mutation-test/src/: delta.rs  main.rs
crates/prop-cov/: Cargo.toml
crates/prop-cov/src/: main.rs
crates/quality-cli/src/: main.rs
crates/quality-common/: Cargo.toml
crates/quality-common/src/: lib.rs
crates/risk-map/: Cargo.toml
crates/risk-map/src/: main.rs
crates/taint-scan/: Cargo.toml
crates/taint-scan/src/: main.rs
docs/: developer-guide.md  quality-standards.md  user-guide.md  utcp-integration.md
docs/screenshots/: crap-help.txt  crap-output.txt  debt-help.txt  debt-output.txt  help.txt  run-table.txt
hermes/: SKILL.md
scripts/: gen-coverage.sh
utcps/: codemetrics.json
