[workspace]
members = [
    "crates/quality-common",
    "crates/ast-parse-ts",
    "crates/crap-metric",
    "crates/mutation-test",
    "crates/debt-scan",
    "crates/doc-coverage",
    "crates/duplication",
    "crates/coupling",
    "crates/risk-map",
    "crates/quality-cli",
    "crates/quality-server",
    "crates/fuzz-surface",
    "crates/prop-cov",
    "crates/taint-scan",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR OPL-1.1"

[profile.release]
lto = true
codegen-units = 1  # Reduce parallel codegen memory usage
strip = "debuginfo"  # Remove debug info from release binaries
