[workspace]
members = [ "crates/codemetrics-common", "crates/ast-parse-ts", "crates/crap-metric", "crates/mutation-test", "crates/debt-scan", "crates/doc-coverage", "crates/duplication", "crates/coupling", "crates/risk-map", "crates/codemetrics-cli", "crates/codemetrics-server", "crates/fuzz-surface", "crates/prop-cov", "crates/taint-scan", "crates/line-length", "crates/halstead", "crates/secrets", "crates/dead-code", "crates/cohesion", "crates/comment-ratio", "crates/error-handling", "crates/type-coverage", "crates/vuln-scan", "crates/sast", "crates/crypto-check", "crates/licenses", "crates/sbom",]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/KidIkaros/codemetrics"
description = "CodeMetrics — production-grade code quality auditing toolkit (10 engines, unified CLI)"
keywords = [ "quality", "metrics", "security", "audit", "cli",]
categories = [ "development-tools", "command-line-utilities", "development-tools::testing",]

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
