[package]
name = "ast-parse-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal AST parsing via tree-sitter — complexity, doc coverage, identifiers for Rust/Python/JS/TS/Go"

[lib]
name = "ast_parse_ts"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin = "0.3"

[dev-dependencies]
