[package]
name = "codemetrics-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified headless CLI for codemetrics -- one command, JSON output, exit codes for CI/agents"

[[bin]]
name = "codemetrics"
path = "src/main.rs"

[dependencies]
ast-parse-ts = { path = "../ast-parse-ts" }
codemetrics-common = { path = "../codemetrics-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
notify = { version = "6", features = ["macos_kqueue"] }
