[[bin]]
name = "codemetrics"
path = "src/main.rs"

[package]
name = "codemetrics-cli"
description = "Unified headless CLI for codemetrics -- one command, JSON output, exit codes for CI/agents"

[dependencies]
serde_json = "1"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[dependencies.ast-parse-ts]
path = "../ast-parse-ts"

[dependencies.codemetrics-common]
path = "../codemetrics-common"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.syn]
version = "2"
features = [ "full", "parsing", "visit",]

[dependencies.notify]
version = "6"
features = [ "macos_kqueue",]
