[package]
name = "codemetrics-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for codemetrics -- file scanning, output formatting, CLI patterns"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }
uuid = { version = "1", features = ["v4", "serde"] }
