[package]
name = "coupling"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Coupling analysis -- module dependency graphs, fan-in/fan-out, tight coupling detection"

[[bin]]
name = "coupling"
path = "src/main.rs"

[dependencies]
quality-common = { path = "../quality-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
