[[bin]]
name = "coupling"
path = "src/main.rs"

[package]
name = "coupling"
description = "Coupling analysis -- module dependency graphs, fan-in/fan-out, tight coupling detection"

[dependencies]
serde_json = "1"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[dependencies.ast-parse-ts]
path = "../ast-parse-ts"

[dependencies.codemetrics-common]
path = "../codemetrics-common"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.serde]
version = "1"
features = [ "derive",]
