[package]
name = "debt-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Technical debt scanner -- track TODO/FIXME/HACK/XXX with git blame attribution"

[[bin]]
name = "debt"
path = "src/main.rs"

[dependencies]
codemetrics-common = { path = "../codemetrics-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
