[[bin]]
name = "debt"
path = "src/main.rs"

[package]
name = "debt-scan"
description = "Technical debt scanner -- track TODO/FIXME/HACK/XXX with git blame attribution"

[dependencies]
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[dependencies.codemetrics-common]
path = "../codemetrics-common"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.serde]
version = "1"
features = [ "derive",]
