[package]
name = "doc-coverage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Documentation coverage -- measure what percentage of public API has doc comments"

[[bin]]
name = "doccov"
path = "src/main.rs"

[dependencies]
ast-parse = { path = "../ast-parse" }
quality-common = { path = "../quality-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
