[package]
name = "doc-coverage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Documentation coverage -- measure what percentage of public API has doc comments"

[[bin]]
name = "doccov"
path = "src/main.rs"

[dependencies]
ast-parse-ts = { path = "../ast-parse-ts" }
codemetrics-common = { path = "../codemetrics-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
