[package]
name = "duplication"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code duplication detection -- find copy-pasted blocks via AST structural similarity"

[[bin]]
name = "dupfind"
path = "src/main.rs"

[dependencies]
ast-parse = { path = "../ast-parse" }
quality-common = { path = "../quality-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
