[package]
name = "fuzz-surface"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Identify functions that accept raw bytes/strings and calculate fuzzability scores"

[[bin]]
name = "fuzz"
path = "src/main.rs"

[dependencies]
codemetrics-common = { path = "../codemetrics-common" }
ast-parse-ts = { path = "../ast-parse-ts" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
