[[bin]]
name = "fuzz"
path = "src/main.rs"

[package]
name = "fuzz-surface"
description = "Identify functions that accept raw bytes/strings and calculate fuzzability scores"

[dependencies]
serde_json = "1"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[dependencies.codemetrics-common]
path = "../codemetrics-common"

[dependencies.ast-parse-ts]
path = "../ast-parse-ts"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.serde]
version = "1"
features = [ "derive",]
