[package]
name = "mutation-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mutation testing tool -- evaluates test suite quality by introducing deliberate code changes"

[[bin]]
name = "mutate"
path = "src/main.rs"

[dependencies]
codemetrics-common = { path = "../codemetrics-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
