[[bin]]
name = "mutate"
path = "src/main.rs"

[package]
name = "mutation-test"
description = "Mutation testing tool -- evaluates test suite quality by introducing deliberate code changes"

[dependencies]
serde_json = "1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[dependencies.codemetrics-common]
path = "../codemetrics-common"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.serde]
version = "1"
features = [ "derive",]
