[package]
name = "prop-cov"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scan for property-based test macros and calculate coverage metrics"

[[bin]]
name = "propcov"
path = "src/main.rs"

[dependencies]
codemetrics-common = { path = "../codemetrics-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ast-parse-ts = { path = "../ast-parse-ts" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
