[[bin]]
name = "propcov"
path = "src/main.rs"

[package]
name = "prop-cov"
description = "Scan for property-based test macros and calculate coverage metrics"

[dependencies]
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[dependencies.codemetrics-common]
path = "../codemetrics-common"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.ast-parse-ts]
path = "../ast-parse-ts"
