[package]
name = "quality-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for quality-tools -- file scanning, output formatting, CLI patterns"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
