[package]
name = "risk-map"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Risk map -- cross-reference git churn with code complexity to find the danger zone"

[[bin]]
name = "riskmap"
path = "src/main.rs"

[dependencies]
ast-parse = { path = "../ast-parse" }
quality-common = { path = "../quality-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
