[package]
name = "risk-map"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Risk map -- cross-reference git churn with code complexity to find the danger zone"

[[bin]]
name = "riskmap"
path = "src/main.rs"

[dependencies]
ast-parse-ts = { path = "../ast-parse-ts" }
codemetrics-common = { path = "../codemetrics-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
