[package]
name = "taint-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Taint/data flow analysis — detect sensitive data leaks via logging or unverified outputs"

[[bin]]
name = "taint"
path = "src/main.rs"

[dependencies]
ast-parse-ts = { path = "../ast-parse-ts" }
codemetrics-common = { path = "../codemetrics-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
